Fix: Social media logo not showing on hero

--- a/src/containers/Home/Hero/index.module.css
+++ b/src/containers/Home/Hero/index.module.css
@@ -169,6 +169,7 @@
 }
 
 .socialMedia svg {
+  fill: white;
   opacity: 0.5;
   padding: 10px;
   width: 20px;
